<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding = "16dp">

    <TextView
        android:id="@+id/modC203"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:clickable="true"
        android:padding = "16dp"
        android:gravity="center"
        android:text="@string/C203"

        />

    <TextView
        android:id="@+id/modC206"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/C206"
        android:padding = "16dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/modC218"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/C218"
        android:padding = "16dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/modC235"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/C235"
        android:padding = "16dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/modC346"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/C346"
        android:padding = "16dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/modG953"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/G953"
        android:padding = "16dp"
        android:layout_marginTop="20dp"/>

</LinearLayout>